#+STARTUP: showeverything

* Changelog

** 0.11

- Changed the implementation of Two and Three in Data.Util
  (hgeometry-combinatorial). Now they have proper Functor, Foldable,
  and Traversable instances.
- Added Data.RealNumber.Rational wrapping the Rational type giving
  some more readable show/read instances

** 0.10

- More Instances

** 0.9

- First release in which hgeometry-combinatorial was split off from hgeometry.