@@ -9,6 +9,7 @@
   and Traversable instances.
 - Added Data.RealNumber.Rational wrapping the Rational type giving
   some more readable show/read instances
+- Added function to compute levels in a Rose-Tree
 
 ** 0.10
 
